--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,20 +1,7 @@
-# Use official Node.js LTS version image
 FROM node:18
-
-# Set working directory
 WORKDIR /usr/src/app
-
-# Copy package.json and package-lock.json
 COPY package*.json ./
-
-# Install app dependencies
 RUN npm install
-
-# Copy the rest of the application code
 COPY . .
-
-# Expose the port your app runs on
 EXPOSE 3000
-
-# Start the Node.js app
-CMD ["node", "app.js"]
+CMD ["node", "server.js"]
