--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: student-form-app/
     image: frontend
-    port:
+    ports:
       - "4200:4200"
     depends_on:
       - backend
