--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "3500:3500"
     env_file:
-      - .env
+      - Backend/.env
     depends_on:
       - db
     networks:
