--- a/student-form-app/Dockerfile
+++ b/student-form-app/Dockerfile
@@ -1,11 +1,10 @@
-FROM node:18 AS build
-WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
-COPY . .
-RUN npm run build --configuration=production
+#FROM node:18 AS build
+#WORKDIR /app
+#COPY package.json package-lock.json ./
+#RUN npm install
+#COPY . .
+#RUN npm run build --configuration=production
 FROM nginx:alpine
-COPY --from=build /app/dist/student-form-app/browser /usr/share/nginx/html
+COPY /dist/student-form-app/browser /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
-
